[fix] fix readme